--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
                 </div>
             </section>
 
-            <aside class="cart-sidebar" id="cartSidebar">
+            <section class="cart-section" id="cartSection">
                 <div class="cart-header">
                     <h3>Shopping Cart</h3>
-                    <button class="close-cart" id="closeCart">&times;</button>
                 </div>
                 <div class="cart-items" id="cartItems">
                     <!-- Cart items will be displayed here -->
@@ -37,7 +36,7 @@
                     </div>
                     <div id="paypal-button-container"></div>
                 </div>
-            </aside>
+            </section>
         </main>
     </div>
 
